@@ -11,7 +11,7 @@ configure_requires:
   ExtUtils::MakeMaker: 6.59
 distribution_type: module
 dynamic_config: 1
-generated_by: 'Module::Install version 1.18'
+generated_by: 'Module::Install version 1.19'
 license: bsd
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -35,4 +35,4 @@ resources:
   homepage: https://github.com/tupinek/Random-Day
   license: http://opensource.org/licenses/bsd-license.php
   repository: git://github.com/tupinek/Random-Day
-version: 0.09
+version: '0.09'
